2000-11-04  Hans-Peter Nilsson  <hp@bitrange.com>

	* hashtab.h (struct htab): Add member return_allocation_failure.
	(htab_try_create): New prototype.  Mention which functions may
	return NULL when this is used.

2000-11-03  Hans-Peter Nilsson  <hp@bitrange.com>

	* hashtab.h: Change void * to PTR where necessary.

2000-10-11  Mark Mitchell  <mark@codesourcery.com>

	* splay-tree.h (splay_tree_predecessor): Declare.

2000-09-29  Hans-Peter Nilsson  <hp@axis.com>

	* dis-asm.h: Declare cris_get_disassembler, not print_insn_cris.
	Fix typo in comment.

2000-09-28  John David Anglin <dave@hiauly1.hia.nrc.ca>

	* alloca-conf.h: New file (copied from libiberty).

2000-09-05  John David Anglin <dave@hiauly1.hia.nrc.ca>

	* md5.h (md5_uint32): Choose via INT_MAX instead of UINT_MAX.

2000-09-04  Alex Samuel  <samuel@codesourcery.com>

	* dyn-string.h: Adjust formatting. 
	(dyn_string_insert_char): New macro.  New declaration.

2000-08-28  Jason Merrill  <jason@redhat.com>

	* md5.h: New file.

2000-08-24  Greg McGary  <greg@mcgary.org>

	* libiberty.h (ARRAY_SIZE): New macro.

2000-08-08  Jason Eckhardt  <jle@cygnus.com>

	* opcode/i860.h: Small formatting adjustments.

2000-07-29  Nick Clifton  <nickc@cygnus.com>

	* os9k.h: Add copyright notice.
	Fix formatting.

2000-07-22  Jason Eckhardt  <jle@cygnus.com>

	* opcode/i860.h (btne, bte, bla): Changed these opcodes
	to use sbroff ('r') instead of split16 ('s').
	(J, K, L, M): New operand types for 16-bit aligned fields.
	(ld.x, {p}fld.x, fst.x, pst.d): Changed these opcodes to
	use I, J, K, L, M instead of just I.
	(T, U): New operand types for split 16-bit aligned fields.
	(st.x): Changed these opcodes to use S, T, U instead of just S.
	(andh, andnoth, orh, xorh): Deleted 3-register forms as they do not
	exist on the i860.
	(pfgt.sd, pfle.sd): Deleted these as they do not exist on the i860.
	(pfeq.ss, pfeq.dd): New opcodes.
	(st.s): Fixed incorrect mask bits.
	(fmlow): Fixed incorrect mask bits.