@@ -1,3 +1,7 @@
+2000-10-11  Kenneth Block <kenneth.block@compaq.com>
+
+	* demangle.h: Add gnat and java demangle styles.
+
 2000-11-04  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* hashtab.h (struct htab): Add member return_allocation_failure.
